[package]
name = "which"
version = "8.0.0"
edition = "2021"
rust-version = "1.70"
authors = ["Harry Fei <tiziyuanfang@gmail.com>, Jacob Kiesel <jake@bitcrafters.co>"]
repository = "https://github.com/harryfei/which-rs.git"
documentation = "https://docs.rs/which/"
license = "MIT"
description = "A Rust equivalent of Unix command \"which\". Locate installed executable in cross platforms."
readme = "README.md"
categories = ["os", "filesystem"]
keywords = ["which", "which-rs", "unix", "command"]

[features]
default = ["real-sys"]
regex = ["dep:regex"]
tracing = ["dep:tracing"]
real-sys = ["dep:env_home", "dep:rustix", "dep:winsafe"]

[dependencies]
regex = { version = "1.10.2", optional = true }
tracing = { version = "0.1.40", default-features = false, optional = true }

[target.'cfg(any(windows, unix, target_os = "redox"))'.dependencies]
env_home = { version = "0.1.0", optional = true }

[target.'cfg(any(unix, target_os = "wasi", target_os = "redox"))'.dependencies]
rustix = { version = "1.0.5", default-features = false, features = ["fs", "std"], optional = true }

[target.'cfg(windows)'.dependencies]
winsafe = { version = "0.0.19", features = ["kernel"], optional = true }

[dev-dependencies]
tempfile = "3.9.0"

[package.metadata.docs.rs]
all-features = true
