[package]
name = "which"
version = "8.0.2"
edition = "2021"
rust-version = "1.70"
authors = ["Harry Fei <tiziyuanfang@gmail.com>, Jacob Kiesel <jake@bitcrafters.co>"]
repository = "https://github.com/harryfei/which-rs.git"
documentation = "https://docs.rs/which/"
license = "MIT"
description = "A Rust equivalent of Unix command \"which\". Locate installed executable in cross platforms."
readme = "README.md"
categories = ["os", "filesystem"]
keywords = ["which", "which-rs", "unix", "command"]

[features]
default = ["real-sys"]
regex = ["dep:regex"]
tracing = ["dep:tracing"]
real-sys = ["dep:libc"]

[dependencies]
regex = { version = "1.10.2", optional = true }
tracing = { version = "0.1.40", default-features = false, optional = true }

[target.'cfg(any(unix, target_os = "wasi", target_os = "redox"))'.dependencies]
libc = { version = "0.2", optional = true }

[dev-dependencies]
tempfile = "3.9.0"

[package.metadata.docs.rs]
all-features = true
